--- a/compose.yml
+++ b/compose.yml
@@ -19,15 +19,29 @@ services:
       - DB_NAME=your_database
       - DB_USER=your_username
       - DB_PASS=your_password
+    ports:
+      - 7070:5000
     depends_on:
       - db
+
+  middleware:
+    build: ./middleware
+    ports:
+      - 7071:5000
+    environment:
+      - DB_HOST=db
+      - DB_NAME=your_database
+      - DB_USER=your_username
+      - DB_PASS=your_password
+    depends_on:
+      - backend
 
   frontend:
     build: ./frontend
     ports:
-      - 5001:5001
+      - 7072:5001
     depends_on:
-      - backend
+      - middleware
 
 # volumes:
 #   postgres_data:
