add testing frontend to middleware

--- a/middleware/Dockerfile
+++ b/middleware/Dockerfile
@@ -7,4 +7,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY main.py .
 
+COPY templates/ ./templates
+
 CMD ["python", "-u", "main.py"]
