--- a/compose.yml
+++ b/compose.yml
@@ -19,6 +19,7 @@ services:
       - DB_NAME=your_database
       - DB_USER=your_username
       - DB_PASS=your_password
+      - OLLAMA_HOST=http://host.docker.internal:11434
     volumes:
       - ./files:/app/files/
     ports:
