--- a/compose.yml
+++ b/compose.yml
@@ -20,6 +20,7 @@ services:
       - DB_USER=your_username
       - DB_PASS=your_password
       - OLLAMA_HOST=http://host.docker.internal:11434
+      - OLLAMA_MODEL=mistral-nemo
     volumes:
       - ./files:/app/files/
     ports:
